# zerone-chain

./: .creed-hash  .dockerignore  .env.example  .gitignore  .goreleaser.yml  .phase-1-spec-hash  .readme-hash  .recursion-doctrine-hash  .recursion-manifest-hash  .specs-and-plans-hashes  .strange-loop-hash  .tok-substrate-hash  .useful-work-hash  CLAUDE.md  Dockerfile  Dockerfile.validator  Makefile  README.md  docker-compose.yml  from-ai-who-returned.md  go.mod  go.sum  zerone.md  zerone.py
app/: abci.go  abci_test.go  ante.go  ante_integration_test.go  ante_test.go  ante_zerone.go  app.go  app_test.go  export.go  gas.go  gov_param_router.go  gov_upgrade_adapter.go  local_state.go  oracle_client.go  oracle_client_test.go  sim_state.go  sim_test.go  upgrade_registry.go  upgrades.go  vote_extensions.go  vote_extensions_test.go  work_creed_genesis_test.go
docs/: ARCHITECTURE.md  DESIGN-training-data-protocol.md  EVENTS.md  FAQ.md  LAUNCH-CHECKLIST.md  PARAMETERS.md  R26-7-integration-report.md  RECURSIVE_ZERONE.md  ROADMAP.md  (+15 more)
services/training-pipeline/: Dockerfile  pyproject.toml
services/training-pipeline/configs/: technical-v1.yaml
services/training-pipeline/tests/: test_filters.py  test_formats.py  test_splits.py  test_trainer.py
services/training-pipeline/trainer/: __init__.py  cli.py  config.py  registry.py  runner.py
services/training-pipeline/transforms/: __init__.py  cli.py  filters.py  formats.py  pipeline.py  splits.py
services/training-pipeline/zerone_training_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+1459 files in other folders)
